# pebble-pedometer

./: jshintrc  package.json  uncrustify.cfg
Report/: algorithm.graffle  rapport.aux  rapport.tex  rapport.toc
resources/images/: logo
src/c/: adaptive_threshold.c  adaptive_threshold.h  app.c  init.c  init.h  init_intern.h  lowpass.c  lowpass.h  main.c  messages.h  moving_window.c  moving_window.h  pedometer.c  pedometer.h
tests/: CMakeLists.txt  adaptive_threshold.cpp  lowpass.cpp  moving_window.cpp  pedometer.cpp  pedometer_csv.c
worker_src/c/: messages.h  moving_window.c  moving_window.h  pedometer.c  pedometer.h  worker.c
